# MSc-Thesis-Code

./: .gitignore  README.md  check_csvs.py  data-exploration.py  data.py  data_exploration.py  geo.py  geo2.py  indicators-real-data.py  main.py  merge_parquet_files.py  new_indicators_pipeline.py  period_analysis.yaml  pipeline_network_analysis.py  pipeline_polars_lazy.py  pipeline_utils.py  process_large_csvs.ps1  process_large_csvs.sh  pyproject.toml  tests.py  tests_data.py  threshold_analysis.py  trajectory_utils.py  trajectory_viewer.py  utils.py
explore_outputs/2019.11.30_区域内/: period_length_stats.json  periods_per_license_plate_stats.json  step_metadata.json
explore_outputs/2019.12.01_区域内/: period_length_stats.json  step_metadata.json  (+1 more)
network_checkpoints/: network_paths_checkpoint.parquet
old/: indicators-real-data.py  indicators.py  new_indicators_pipeline.py  tests_data.py  trajectory_utils.py  trajectory_viewer.py
pipeline_stats/: LAST_RUN_ID  network_outlier_flag_stats_20250515_210236.json  network_outlier_flag_stats_20250516_072626.json  network_shortest_paths_stats_20250515_210236.json  network_shortest_paths_stats_20250515_210627.json  network_shortest_paths_stats_20250516_072626.json
scripts/: 01_segment_periods.py  02_remove_short_periods.py  03_compute_implied_speeds.py  04_remove_outlier_periods.py  05_douglas_peucker.py  06_add_straight_line_distance.py  07_compute_osmnx_network_distance.py
tests/: test_period_segmentation.py  test_pipeline_reuse.py  tests.py
utils/: period_segmentation.py  pipeline_helpers.py  stats_and_plotting.py
(+108 files in other folders)
