[project]
name = "msc-thesis-code"
version = "0.1.0"
description = "MSc Thesis Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.5",
    # Required for outlier detection
    "scikit-learn>=1.0.0",
    # Required for threshold analysis plots
    "matplotlib>=3.0.0",
    "polars>=1.30.0",
    "psutil>=7.0.0",
    "tqdm>=4.67.1",
]

[tool.marimo.experimental]
lsp = true

[tool.marimo.diagnostics]
enabled = true

[project.scripts]
pytest = "pytest:main"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["tests.py"]

[tool.poetry.dependencies]
psutil = "*"
tqdm = "*"
